--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,42 +1,20 @@
-log.dir=c:/var/log/foo
-rrd.dir=${log.dir}/rrd
-datestamp=yyyy-MM-dd/HH:mm:ss.SSS/zzz
-roll.pattern.hourly=.yyyy-MM-dd.HH
-roll.pattern.daily=.yyyy-MM-dd
+log4j.rootLogger=DEBUG
 
-# catchAll.log -- Default catch-all.
-log4j.rootLogger=DEBUG, defaultLog
-log4j.appender.defaultLog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.defaultLog.DatePattern=${roll.pattern.daily}
-log4j.appender.defaultLog.File=${log.dir}/catchAll.log
-log4j.appender.defaultLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.defaultLog.layout.ConversionPattern=%d{${datestamp}} [%t] %-5p %m%n
+# AdminFileAppender - used to log messages in the admin.log file.
+log4j.appender.AdminFileAppender=org.apache.log4j.FileAppender
 
-# foo.log
-log4j.logger.com.foo.shared=INFO,fooLog
-log4j.logger.com.foo.abc=INFO,fooLog
-log4j.additivity.com.foo.shared=false
-log4j.additivity.com.foo.abc=false
-log4j.appender.fooLog=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.fooLog.File=${log.dir}/foo.log
-log4j.appender.fooLog.DatePattern=${roll.pattern.hourly}
-log4j.appender.fooLog.layout=org.apache.log4j.PatternLayout
-log4j.appender.fooLog.layout.ConversionPattern=%d{${datestamp}}%p%m%n
+log4j.appender.AdminFileAppender.File=C:/var/admin.log
 
-# fooConnections.log
-log4j.logger.connections.com.foo=INFO,fooConnections
-log4j.additivity.connections=false
-log4j.appender.fooConnections=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.fooConnections.File=${log.dir}/fooConnections.log
-log4j.appender.fooConnections.DatePattern=${roll.pattern.daily}
-log4j.appender.fooConnections.layout=org.apache.log4j.PatternLayout
-log4j.appender.fooConnections.layout.ConversionPattern=%d{${datestamp}}%p%m%n
+log4j.appender.AdminFileAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.AdminFileAppender.layout.ConversionPattern= %-4r [%t] %-5p %c %x - %m%n
 
-# fooStacktraces.log
-log4j.logger.stacktraces.com.foo=INFO, stacktraces
-log4j.additivity.stacktraces=false
-log4j.appender.stacktraces=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.stacktraces.File=${log.dir}/fooStacktraces.log
-log4j.appender.stacktraces.DatePattern=${roll.pattern.daily}
-log4j.appender.stacktraces.layout=org.apache.log4j.PatternLayout
-log4j.appender.stacktraces.layout.ConversionPattern=%d{${datestamp}}%p%m%n
+# ReportFileAppender - used to log messages in the report.log file.
+log4j.appender.ReportFileAppender=org.apache.log4j.FileAppender
+
+log4j.appender.ReportFileAppender.File=C:/var/report.log
+
+log4j.appender.ReportFileAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.ReportFileAppender.layout.ConversionPattern= %-4r [%t] %-5p %c %x - %m%n
+
+log4j.logger.com.vaannila.admin=WARN,AdminFileAppender
+log4j.logger.com.vaannila.report=DEBUG,ReportFileAppender
