--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.AdminFileAppender=org.apache.log4j.FileAppender
 log4j.appender.AdminFileAppender.File=C:/var/admin.log
 
 log4j.appender.AdminFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.AdminFileAppender.layout.ConversionPattern= %-4r [%t] %-5p %c %x - %m%n
+log4j.appender.AdminFileAppender.layout.ConversionPattern=%-4r [%t] %d{yyyyMMdd@HH\:mm\:ss}\: %-5p %c %x - %m%n
 
 # ReportFileAppender - used to log messages in the report.log file.
 log4j.appender.ReportFileAppender=org.apache.log4j.FileAppender
@@ -14,7 +14,10 @@ log4j.appender.ReportFileAppender=org.apache.log4j.FileAppender
 log4j.appender.ReportFileAppender.File=C:/var/report.log
 
 log4j.appender.ReportFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.ReportFileAppender.layout.ConversionPattern= %-4r [%t] %-5p %c %x - %m%n
+log4j.appender.ReportFileAppender.layout.ConversionPattern= %-4r [%t] %d{yyyyMMdd@HH\:mm\:ss}\: %-5p %c %x - %m%n
 
 log4j.logger.com.vaannila.admin=WARN,AdminFileAppender
 log4j.logger.com.vaannila.report=DEBUG,ReportFileAppender
+
+
+[%-5p]%d{yyyyMMdd@HH\:mm\:ss}\:%c - %m%n
