--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.ReportFileAppender=org.apache.log4j.FileAppender
 log4j.appender.ReportFileAppender.File=C:/var/report.log
 
 log4j.appender.ReportFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.ReportFileAppender.layout.ConversionPattern=  [%-5p] [%t] %d{yyyyMMdd@HH\:mm\:ss,SSS}\:%c %x - %m%n
+log4j.appender.ReportFileAppender.layout.ConversionPattern=  [%-5p] %d{HH\:mm\:ss,SSS} - %m%n
 
 log4j.logger.com.audiostorage.admin=WARN,AdminFileAppender
 log4j.logger.com.audiostorage.report=DEBUG,ReportFileAppender
